name:             webcat
build-type:       Simple
version:          0.0.1
cabal-version:    >= 1.10
license:          AllRightsReserved
license-file:     LICENSE
author:           Xavier Lange, Rense Lange
homepage:         http://www.tureus.com/
category:         Computation
synopsis:         A Rasch scaling library for psycometric items

executable kitty
  build-depends:    base
  default-language: Haskell2010
  main-is:          Main.hs

library
  build-depends:    base
  default-language: Haskell2010
  exposed-modules:
    Webcat.Factor
    Webcat.Item

-- Library
--  Build-Depends: base
--  Exposed-modules:
--    Webcat.Factor Webcat.Item
